--- a/index.html
+++ b/index.html
@@ -130,8 +130,13 @@
                     <h2>Watch our entire trip documentation</h2>
                 </div>
                 <div class="documentary-img">
-                    <img src="Images/Image (12).png" alt="A video documentary">
-                    <img src="icons/Playbutton.png" alt="Playbutton icon">
+                    <iframe
+                        src="https://www.youtube.com/embed/cEHP_LeBeyQ?rel=0&showinfo=0"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                   </iframe>
                 </div>
             </div>
         </section>
