Desktop Version (With video now)3.0

--- a/index.html
+++ b/index.html
@@ -130,13 +130,9 @@
                     <h2>Watch our entire trip documentation</h2>
                 </div>
                 <div class="documentary-img">
-                    <iframe
-                        src="https://www.youtube.com/embed/cEHP_LeBeyQ?rel=0&showinfo=0"
-                        title="YouTube video player"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen>
-                   </iframe>
+                    <video autoplay muted loop>
+                        <source src="Video/Travel-video.mp4" type="video/mp4">Your browser does not support the video tag.
+                    </video>
                 </div>
             </div>
         </section>
